lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instructions_opt
Rule 1     instructions_opt -> instructions
Rule 2     instructions_opt -> <empty>
Rule 3     instructions -> instructions instruction
Rule 4     instructions -> instruction
Rule 5     instruction -> sys_instruction ;
Rule 6     instruction -> assignment ;
Rule 7     instruction -> { instructions }
Rule 8     instruction -> FOR var = expression : expression instruction
Rule 9     instruction -> WHILE ( condition ) instruction
Rule 10    instruction -> IF ( condition ) instruction
Rule 11    instruction -> IF ( condition ) instruction ELSE instruction
Rule 12    condition -> expression EQ expression
Rule 13    condition -> expression NE expression
Rule 14    condition -> expression LE expression
Rule 15    condition -> expression GE expression
Rule 16    condition -> expression LT expression
Rule 17    condition -> expression GT expression
Rule 18    sys_instruction -> BREAK
Rule 19    sys_instruction -> CONTINUE
Rule 20    sys_instruction -> RETURN expression
Rule 21    sys_instruction -> PRINT print_values
Rule 22    print_values -> print_values , string
Rule 23    print_values -> print_values , expression
Rule 24    print_values -> string
Rule 25    print_values -> expression
Rule 26    expression -> number
Rule 27    expression -> var
Rule 28    expression -> matrix
Rule 29    expression -> matrix_function
Rule 30    expression -> uminus
Rule 31    expression -> transposition
Rule 32    expression -> matrix_element
Rule 33    expression -> vector_element
Rule 34    assignment -> var assignment_operator expression
Rule 35    assignment -> matrix_element assignment_operator expression
Rule 36    assignment -> vector_element assignment_operator expression
Rule 37    assignment_operator -> =
Rule 38    assignment_operator -> ADDASSIGN
Rule 39    assignment_operator -> SUBASSIGN
Rule 40    assignment_operator -> MULASSIGN
Rule 41    assignment_operator -> DIVASSIGN
Rule 42    matrix_function -> EYE ( INTNUM )
Rule 43    matrix_function -> ONES ( INTNUM )
Rule 44    matrix_function -> ZEROS ( INTNUM )
Rule 45    matrix -> [ vectors ]
Rule 46    vectors -> vectors , vector
Rule 47    vectors -> vector
Rule 48    vector -> [ variables ]
Rule 49    variables -> variables , variable
Rule 50    variables -> variable
Rule 51    variable -> number
Rule 52    variable -> var
Rule 53    variable -> element
Rule 54    element -> vector_element
Rule 55    element -> matrix_element
Rule 56    vector_element -> ID [ INTNUM ]
Rule 57    matrix_element -> ID [ INTNUM , INTNUM ]
Rule 58    var -> ID
Rule 59    number -> INTNUM
Rule 60    number -> FLOATNUM
Rule 61    string -> STRING
Rule 62    expression -> expression + expression
Rule 63    expression -> expression - expression
Rule 64    expression -> expression * expression
Rule 65    expression -> expression / expression
Rule 66    expression -> expression DOTADD expression
Rule 67    expression -> expression DOTSUB expression
Rule 68    expression -> expression DOTMUL expression
Rule 69    expression -> expression DOTDIV expression
Rule 70    uminus -> - expression
Rule 71    transposition -> expression '

Terminals, with rules where they appear

'                    : 71
(                    : 9 10 11 42 43 44
)                    : 9 10 11 42 43 44
*                    : 64
+                    : 62
,                    : 22 23 46 49 57
-                    : 63 70
/                    : 65
:                    : 8
;                    : 5 6
=                    : 8 37
ADDASSIGN            : 38
BREAK                : 18
CONTINUE             : 19
DIVASSIGN            : 41
DOTADD               : 66
DOTDIV               : 69
DOTMUL               : 68
DOTSUB               : 67
ELSE                 : 11
EQ                   : 12
EYE                  : 42
FLOATNUM             : 60
FOR                  : 8
GE                   : 15
GT                   : 17
ID                   : 56 57 58
IF                   : 10 11
INTNUM               : 42 43 44 56 57 57 59
LE                   : 14
LT                   : 16
MULASSIGN            : 40
NE                   : 13
ONES                 : 43
PRINT                : 21
RETURN               : 20
STRING               : 61
SUBASSIGN            : 39
WHILE                : 9
ZEROS                : 44
[                    : 45 48 56 57
]                    : 45 48 56 57
error                : 
{                    : 7
}                    : 7

Nonterminals, with rules where they appear

assignment           : 6
assignment_operator  : 34 35 36
condition            : 9 10 11
element              : 53
expression           : 8 8 12 12 13 13 14 14 15 15 16 16 17 17 20 23 25 34 35 36 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 71
instruction          : 3 4 8 9 10 11 11
instructions         : 1 3 7
instructions_opt     : 0
matrix               : 28
matrix_element       : 32 35 55
matrix_function      : 29
number               : 26 51
print_values         : 21 22 23
string               : 22 24
sys_instruction      : 5
transposition        : 31
uminus               : 30
var                  : 8 27 34 52
variable             : 49 50
variables            : 48 49
vector               : 46 47
vector_element       : 33 36 54
vectors              : 45 46

Parsing method: LALR

state 0

    (0) S' -> . instructions_opt
    (1) instructions_opt -> . instructions
    (2) instructions_opt -> .
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (5) instruction -> . sys_instruction ;
    (6) instruction -> . assignment ;
    (7) instruction -> . { instructions }
    (8) instruction -> . FOR var = expression : expression instruction
    (9) instruction -> . WHILE ( condition ) instruction
    (10) instruction -> . IF ( condition ) instruction
    (11) instruction -> . IF ( condition ) instruction ELSE instruction
    (18) sys_instruction -> . BREAK
    (19) sys_instruction -> . CONTINUE
    (20) sys_instruction -> . RETURN expression
    (21) sys_instruction -> . PRINT print_values
    (34) assignment -> . var assignment_operator expression
    (35) assignment -> . matrix_element assignment_operator expression
    (36) assignment -> . vector_element assignment_operator expression
    (58) var -> . ID
    (57) matrix_element -> . ID [ INTNUM , INTNUM ]
    (56) vector_element -> . ID [ INTNUM ]

    $end            reduce using rule 2 (instructions_opt -> .)
    {               shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ID              shift and go to state 17

    instructions_opt               shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    sys_instruction                shift and go to state 4
    assignment                     shift and go to state 5
    var                            shift and go to state 8
    matrix_element                 shift and go to state 15
    vector_element                 shift and go to state 16

state 1

    (0) S' -> instructions_opt .



state 2

    (1) instructions_opt -> instructions .
    (3) instructions -> instructions . instruction
    (5) instruction -> . sys_instruction ;
    (6) instruction -> . assignment ;
    (7) instruction -> . { instructions }
    (8) instruction -> . FOR var = expression : expression instruction
    (9) instruction -> . WHILE ( condition ) instruction
    (10) instruction -> . IF ( condition ) instruction
    (11) instruction -> . IF ( condition ) instruction ELSE instruction
    (18) sys_instruction -> . BREAK
    (19) sys_instruction -> . CONTINUE
    (20) sys_instruction -> . RETURN expression
    (21) sys_instruction -> . PRINT print_values
    (34) assignment -> . var assignment_operator expression
    (35) assignment -> . matrix_element assignment_operator expression
    (36) assignment -> . vector_element assignment_operator expression
    (58) var -> . ID
    (57) matrix_element -> . ID [ INTNUM , INTNUM ]
    (56) vector_element -> . ID [ INTNUM ]

    $end            reduce using rule 1 (instructions_opt -> instructions .)
    {               shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ID              shift and go to state 17

    instruction                    shift and go to state 18
    sys_instruction                shift and go to state 4
    assignment                     shift and go to state 5
    var                            shift and go to state 8
    matrix_element                 shift and go to state 15
    vector_element                 shift and go to state 16

state 3

    (4) instructions -> instruction .

    {               reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 4

    (5) instruction -> sys_instruction . ;

    ;               shift and go to state 19


state 5

    (6) instruction -> assignment . ;

    ;               shift and go to state 20


state 6

    (7) instruction -> { . instructions }
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (5) instruction -> . sys_instruction ;
    (6) instruction -> . assignment ;
    (7) instruction -> . { instructions }
    (8) instruction -> . FOR var = expression : expression instruction
    (9) instruction -> . WHILE ( condition ) instruction
    (10) instruction -> . IF ( condition ) instruction
    (11) instruction -> . IF ( condition ) instruction ELSE instruction
    (18) sys_instruction -> . BREAK
    (19) sys_instruction -> . CONTINUE
    (20) sys_instruction -> . RETURN expression
    (21) sys_instruction -> . PRINT print_values
    (34) assignment -> . var assignment_operator expression
    (35) assignment -> . matrix_element assignment_operator expression
    (36) assignment -> . vector_element assignment_operator expression
    (58) var -> . ID
    (57) matrix_element -> . ID [ INTNUM , INTNUM ]
    (56) vector_element -> . ID [ INTNUM ]

    {               shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ID              shift and go to state 17

    instructions                   shift and go to state 21
    instruction                    shift and go to state 3
    sys_instruction                shift and go to state 4
    assignment                     shift and go to state 5
    var                            shift and go to state 8
    matrix_element                 shift and go to state 15
    vector_element                 shift and go to state 16

state 7

    (8) instruction -> FOR . var = expression : expression instruction
    (58) var -> . ID

    ID              shift and go to state 23

    var                            shift and go to state 22

state 8

    (34) assignment -> var . assignment_operator expression
    (37) assignment_operator -> . =
    (38) assignment_operator -> . ADDASSIGN
    (39) assignment_operator -> . SUBASSIGN
    (40) assignment_operator -> . MULASSIGN
    (41) assignment_operator -> . DIVASSIGN

    =               shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29

    assignment_operator            shift and go to state 24

state 9

    (9) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 30


state 10

    (10) instruction -> IF . ( condition ) instruction
    (11) instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 31


state 11

    (18) sys_instruction -> BREAK .

    ;               reduce using rule 18 (sys_instruction -> BREAK .)


state 12

    (19) sys_instruction -> CONTINUE .

    ;               reduce using rule 19 (sys_instruction -> CONTINUE .)


state 13

    (20) sys_instruction -> RETURN . expression
    (26) expression -> . number
    (27) expression -> . var
    (28) expression -> . matrix
    (29) expression -> . matrix_function
    (30) expression -> . uminus
    (31) expression -> . transposition
    (32) expression -> . matrix_element
    (33) expression -> . vector_element
    (62) expression -> . expression + expression
    (63) expression -> . expression - expression
    (64) expression -> . expression * expression
    (65) expression -> . expression / expression
    (66) expression -> . expression DOTADD expression
    (67) expression -> . expression DOTSUB expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTDIV expression
    (59) number -> . INTNUM
    (60) number -> . FLOATNUM
    (58) var -> . ID
    (45) matrix -> . [ vectors ]
    (42) matrix_function -> . EYE ( INTNUM )
    (43) matrix_function -> . ONES ( INTNUM )
    (44) matrix_function -> . ZEROS ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (57) matrix_element -> . ID [ INTNUM , INTNUM ]
    (56) vector_element -> . ID [ INTNUM ]

    INTNUM          shift and go to state 42
    FLOATNUM        shift and go to state 43
    ID              shift and go to state 17
    [               shift and go to state 44
    EYE             shift and go to state 45
    ONES            shift and go to state 46
    ZEROS           shift and go to state 47
    -               shift and go to state 41

    expression                     shift and go to state 32
    number                         shift and go to state 33
    var                            shift and go to state 34
    matrix                         shift and go to state 35
    matrix_function                shift and go to state 36
    uminus                         shift and go to state 37
    transposition                  shift and go to state 38
    matrix_element                 shift and go to state 39
    vector_element                 shift and go to state 40

state 14

    (21) sys_instruction -> PRINT . print_values
    (22) print_values -> . print_values , string
    (23) print_values -> . print_values , expression
    (24) print_values -> . string
    (25) print_values -> . expression
    (61) string -> . STRING
    (26) expression -> . number
    (27) expression -> . var
    (28) expression -> . matrix
    (29) expression -> . matrix_function
    (30) expression -> . uminus
    (31) expression -> . transposition
    (32) expression -> . matrix_element
    (33) expression -> . vector_element
    (62) expression -> . expression + expression
    (63) expression -> . expression - expression
    (64) expression -> . expression * expression
    (65) expression -> . expression / expression
    (66) expression -> . expression DOTADD expression
    (67) expression -> . expression DOTSUB expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTDIV expression
    (59) number -> . INTNUM
    (60) number -> . FLOATNUM
    (58) var -> . ID
    (45) matrix -> . [ vectors ]
    (42) matrix_function -> . EYE ( INTNUM )
    (43) matrix_function -> . ONES ( INTNUM )
    (44) matrix_function -> . ZEROS ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (57) matrix_element -> . ID [ INTNUM , INTNUM ]
    (56) vector_element -> . ID [ INTNUM ]

    STRING          shift and go to state 51
    INTNUM          shift and go to state 42
    FLOATNUM        shift and go to state 43
    ID              shift and go to state 17
    [               shift and go to state 44
    EYE             shift and go to state 45
    ONES            shift and go to state 46
    ZEROS           shift and go to state 47
    -               shift and go to state 41

    print_values                   shift and go to state 48
    string                         shift and go to state 49
    expression                     shift and go to state 50
    number                         shift and go to state 33
    var                            shift and go to state 34
    matrix                         shift and go to state 35
    matrix_function                shift and go to state 36
    uminus                         shift and go to state 37
    transposition                  shift and go to state 38
    matrix_element                 shift and go to state 39
    vector_element                 shift and go to state 40

state 15

    (35) assignment -> matrix_element . assignment_operator expression
    (37) assignment_operator -> . =
    (38) assignment_operator -> . ADDASSIGN
    (39) assignment_operator -> . SUBASSIGN
    (40) assignment_operator -> . MULASSIGN
    (41) assignment_operator -> . DIVASSIGN

    =               shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29

    assignment_operator            shift and go to state 52

state 16

    (36) assignment -> vector_element . assignment_operator expression
    (37) assignment_operator -> . =
    (38) assignment_operator -> . ADDASSIGN
    (39) assignment_operator -> . SUBASSIGN
    (40) assignment_operator -> . MULASSIGN
    (41) assignment_operator -> . DIVASSIGN

    =               shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29

    assignment_operator            shift and go to state 53

state 17

    (58) var -> ID .
    (57) matrix_element -> ID . [ INTNUM , INTNUM ]
    (56) vector_element -> ID . [ INTNUM ]

    =               reduce using rule 58 (var -> ID .)
    ADDASSIGN       reduce using rule 58 (var -> ID .)
    SUBASSIGN       reduce using rule 58 (var -> ID .)
    MULASSIGN       reduce using rule 58 (var -> ID .)
    DIVASSIGN       reduce using rule 58 (var -> ID .)
    +               reduce using rule 58 (var -> ID .)
    -               reduce using rule 58 (var -> ID .)
    *               reduce using rule 58 (var -> ID .)
    /               reduce using rule 58 (var -> ID .)
    DOTADD          reduce using rule 58 (var -> ID .)
    DOTSUB          reduce using rule 58 (var -> ID .)
    DOTMUL          reduce using rule 58 (var -> ID .)
    DOTDIV          reduce using rule 58 (var -> ID .)
    '               reduce using rule 58 (var -> ID .)
    ;               reduce using rule 58 (var -> ID .)
    ,               reduce using rule 58 (var -> ID .)
    EQ              reduce using rule 58 (var -> ID .)
    NE              reduce using rule 58 (var -> ID .)
    LE              reduce using rule 58 (var -> ID .)
    GE              reduce using rule 58 (var -> ID .)
    LT              reduce using rule 58 (var -> ID .)
    GT              reduce using rule 58 (var -> ID .)
    :               reduce using rule 58 (var -> ID .)
    )               reduce using rule 58 (var -> ID .)
    {               reduce using rule 58 (var -> ID .)
    FOR             reduce using rule 58 (var -> ID .)
    WHILE           reduce using rule 58 (var -> ID .)
    IF              reduce using rule 58 (var -> ID .)
    BREAK           reduce using rule 58 (var -> ID .)
    CONTINUE        reduce using rule 58 (var -> ID .)
    RETURN          reduce using rule 58 (var -> ID .)
    PRINT           reduce using rule 58 (var -> ID .)
    ID              reduce using rule 58 (var -> ID .)
    [               shift and go to state 54


state 18

    (3) instructions -> instructions instruction .

    {               reduce using rule 3 (instructions -> instructions instruction .)
    FOR             reduce using rule 3 (instructions -> instructions instruction .)
    WHILE           reduce using rule 3 (instructions -> instructions instruction .)
    IF              reduce using rule 3 (instructions -> instructions instruction .)
    BREAK           reduce using rule 3 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instructions instruction .)
    RETURN          reduce using rule 3 (instructions -> instructions instruction .)
    PRINT           reduce using rule 3 (instructions -> instructions instruction .)
    ID              reduce using rule 3 (instructions -> instructions instruction .)
    $end            reduce using rule 3 (instructions -> instructions instruction .)
    }               reduce using rule 3 (instructions -> instructions instruction .)


state 19

    (5) instruction -> sys_instruction ; .

    {               reduce using rule 5 (instruction -> sys_instruction ; .)
    FOR             reduce using rule 5 (instruction -> sys_instruction ; .)
    WHILE           reduce using rule 5 (instruction -> sys_instruction ; .)
    IF              reduce using rule 5 (instruction -> sys_instruction ; .)
    BREAK           reduce using rule 5 (instruction -> sys_instruction ; .)
    CONTINUE        reduce using rule 5 (instruction -> sys_instruction ; .)
    RETURN          reduce using rule 5 (instruction -> sys_instruction ; .)
    PRINT           reduce using rule 5 (instruction -> sys_instruction ; .)
    ID              reduce using rule 5 (instruction -> sys_instruction ; .)
    $end            reduce using rule 5 (instruction -> sys_instruction ; .)
    }               reduce using rule 5 (instruction -> sys_instruction ; .)
    ELSE            reduce using rule 5 (instruction -> sys_instruction ; .)


state 20

    (6) instruction -> assignment ; .

    {               reduce using rule 6 (instruction -> assignment ; .)
    FOR             reduce using rule 6 (instruction -> assignment ; .)
    WHILE           reduce using rule 6 (instruction -> assignment ; .)
    IF              reduce using rule 6 (instruction -> assignment ; .)
    BREAK           reduce using rule 6 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 6 (instruction -> assignment ; .)
    RETURN          reduce using rule 6 (instruction -> assignment ; .)
    PRINT           reduce using rule 6 (instruction -> assignment ; .)
    ID              reduce using rule 6 (instruction -> assignment ; .)
    $end            reduce using rule 6 (instruction -> assignment ; .)
    }               reduce using rule 6 (instruction -> assignment ; .)
    ELSE            reduce using rule 6 (instruction -> assignment ; .)


state 21

    (7) instruction -> { instructions . }
    (3) instructions -> instructions . instruction
    (5) instruction -> . sys_instruction ;
    (6) instruction -> . assignment ;
    (7) instruction -> . { instructions }
    (8) instruction -> . FOR var = expression : expression instruction
    (9) instruction -> . WHILE ( condition ) instruction
    (10) instruction -> . IF ( condition ) instruction
    (11) instruction -> . IF ( condition ) instruction ELSE instruction
    (18) sys_instruction -> . BREAK
    (19) sys_instruction -> . CONTINUE
    (20) sys_instruction -> . RETURN expression
    (21) sys_instruction -> . PRINT print_values
    (34) assignment -> . var assignment_operator expression
    (35) assignment -> . matrix_element assignment_operator expression
    (36) assignment -> . vector_element assignment_operator expression
    (58) var -> . ID
    (57) matrix_element -> . ID [ INTNUM , INTNUM ]
    (56) vector_element -> . ID [ INTNUM ]

    }               shift and go to state 55
    {               shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ID              shift and go to state 17

    instruction                    shift and go to state 18
    sys_instruction                shift and go to state 4
    assignment                     shift and go to state 5
    var                            shift and go to state 8
    matrix_element                 shift and go to state 15
    vector_element                 shift and go to state 16

state 22

    (8) instruction -> FOR var . = expression : expression instruction

    =               shift and go to state 56


state 23

    (58) var -> ID .

    =               reduce using rule 58 (var -> ID .)


state 24

    (34) assignment -> var assignment_operator . expression
    (26) expression -> . number
    (27) expression -> . var
    (28) expression -> . matrix
    (29) expression -> . matrix_function
    (30) expression -> . uminus
    (31) expression -> . transposition
    (32) expression -> . matrix_element
    (33) expression -> . vector_element
    (62) expression -> . expression + expression
    (63) expression -> . expression - expression
    (64) expression -> . expression * expression
    (65) expression -> . expression / expression
    (66) expression -> . expression DOTADD expression
    (67) expression -> . expression DOTSUB expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTDIV expression
    (59) number -> . INTNUM
    (60) number -> . FLOATNUM
    (58) var -> . ID
    (45) matrix -> . [ vectors ]
    (42) matrix_function -> . EYE ( INTNUM )
    (43) matrix_function -> . ONES ( INTNUM )
    (44) matrix_function -> . ZEROS ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (57) matrix_element -> . ID [ INTNUM , INTNUM ]
    (56) vector_element -> . ID [ INTNUM ]

    INTNUM          shift and go to state 42
    FLOATNUM        shift and go to state 43
    ID              shift and go to state 17
    [               shift and go to state 44
    EYE             shift and go to state 45
    ONES            shift and go to state 46
    ZEROS           shift and go to state 47
    -               shift and go to state 41

    var                            shift and go to state 34
    expression                     shift and go to state 57
    number                         shift and go to state 33
    matrix                         shift and go to state 35
    matrix_function                shift and go to state 36
    uminus                         shift and go to state 37
    transposition                  shift and go to state 38
    matrix_element                 shift and go to state 39
    vector_element                 shift and go to state 40

state 25

    (37) assignment_operator -> = .

    INTNUM          reduce using rule 37 (assignment_operator -> = .)
    FLOATNUM        reduce using rule 37 (assignment_operator -> = .)
    ID              reduce using rule 37 (assignment_operator -> = .)
    [               reduce using rule 37 (assignment_operator -> = .)
    EYE             reduce using rule 37 (assignment_operator -> = .)
    ONES            reduce using rule 37 (assignment_operator -> = .)
    ZEROS           reduce using rule 37 (assignment_operator -> = .)
    -               reduce using rule 37 (assignment_operator -> = .)


state 26

    (38) assignment_operator -> ADDASSIGN .

    INTNUM          reduce using rule 38 (assignment_operator -> ADDASSIGN .)
    FLOATNUM        reduce using rule 38 (assignment_operator -> ADDASSIGN .)
    ID              reduce using rule 38 (assignment_operator -> ADDASSIGN .)
    [               reduce using rule 38 (assignment_operator -> ADDASSIGN .)
    EYE             reduce using rule 38 (assignment_operator -> ADDASSIGN .)
    ONES            reduce using rule 38 (assignment_operator -> ADDASSIGN .)
    ZEROS           reduce using rule 38 (assignment_operator -> ADDASSIGN .)
    -               reduce using rule 38 (assignment_operator -> ADDASSIGN .)


state 27

    (39) assignment_operator -> SUBASSIGN .

    INTNUM          reduce using rule 39 (assignment_operator -> SUBASSIGN .)
    FLOATNUM        reduce using rule 39 (assignment_operator -> SUBASSIGN .)
    ID              reduce using rule 39 (assignment_operator -> SUBASSIGN .)
    [               reduce using rule 39 (assignment_operator -> SUBASSIGN .)
    EYE             reduce using rule 39 (assignment_operator -> SUBASSIGN .)
    ONES            reduce using rule 39 (assignment_operator -> SUBASSIGN .)
    ZEROS           reduce using rule 39 (assignment_operator -> SUBASSIGN .)
    -               reduce using rule 39 (assignment_operator -> SUBASSIGN .)


state 28

    (40) assignment_operator -> MULASSIGN .

    INTNUM          reduce using rule 40 (assignment_operator -> MULASSIGN .)
    FLOATNUM        reduce using rule 40 (assignment_operator -> MULASSIGN .)
    ID              reduce using rule 40 (assignment_operator -> MULASSIGN .)
    [               reduce using rule 40 (assignment_operator -> MULASSIGN .)
    EYE             reduce using rule 40 (assignment_operator -> MULASSIGN .)
    ONES            reduce using rule 40 (assignment_operator -> MULASSIGN .)
    ZEROS           reduce using rule 40 (assignment_operator -> MULASSIGN .)
    -               reduce using rule 40 (assignment_operator -> MULASSIGN .)


state 29

    (41) assignment_operator -> DIVASSIGN .

    INTNUM          reduce using rule 41 (assignment_operator -> DIVASSIGN .)
    FLOATNUM        reduce using rule 41 (assignment_operator -> DIVASSIGN .)
    ID              reduce using rule 41 (assignment_operator -> DIVASSIGN .)
    [               reduce using rule 41 (assignment_operator -> DIVASSIGN .)
    EYE             reduce using rule 41 (assignment_operator -> DIVASSIGN .)
    ONES            reduce using rule 41 (assignment_operator -> DIVASSIGN .)
    ZEROS           reduce using rule 41 (assignment_operator -> DIVASSIGN .)
    -               reduce using rule 41 (assignment_operator -> DIVASSIGN .)


state 30

    (9) instruction -> WHILE ( . condition ) instruction
    (12) condition -> . expression EQ expression
    (13) condition -> . expression NE expression
    (14) condition -> . expression LE expression
    (15) condition -> . expression GE expression
    (16) condition -> . expression LT expression
    (17) condition -> . expression GT expression
    (26) expression -> . number
    (27) expression -> . var
    (28) expression -> . matrix
    (29) expression -> . matrix_function
    (30) expression -> . uminus
    (31) expression -> . transposition
    (32) expression -> . matrix_element
    (33) expression -> . vector_element
    (62) expression -> . expression + expression
    (63) expression -> . expression - expression
    (64) expression -> . expression * expression
    (65) expression -> . expression / expression
    (66) expression -> . expression DOTADD expression
    (67) expression -> . expression DOTSUB expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTDIV expression
    (59) number -> . INTNUM
    (60) number -> . FLOATNUM
    (58) var -> . ID
    (45) matrix -> . [ vectors ]
    (42) matrix_function -> . EYE ( INTNUM )
    (43) matrix_function -> . ONES ( INTNUM )
    (44) matrix_function -> . ZEROS ( INTNUM )
    (70) uminus -> . - expression
    (71) transposition -> . expression '
    (57) matrix_element -> . ID [ INTNUM , INTNUM ]
    (56) vector_element -> . ID [ INTNUM ]

    INTNUM          shift and go to state 42
    FLOATNUM        shift and go to state 43
    ID              shift and go to state 17
    [               shift and go to state 44
    EYE             shift and go to state 45
    ONES            shift and go to state 46
    ZEROS           shift and go to state 47
    -               shift and go to state 41

    condition                      shift and go to state 58
    expression                     shift and go to state 59
    number                         shift and go to state 33
    var                            shift and go to state 34
    matrix                         shift and go to state 35
    matrix_function                shift and go to state 36
    uminus                         shift and go to state 37
    transposition                  shift and go to state 38
    matrix_element                 shift and go to state 39
    vector_element                 shift and go to state 40

state 31
